# pract2sem

./: README.md
pr1/: CMakeLists.txt  main.cpp  pr1.hpp
pr2/: CMakeLists.txt  main.cpp
pr3/: CMakeLists.txt  main.cpp
project2/: Ball.cpp  Ball.hpp  CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
